<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/new_product_top_title_layout"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_cancel"
            android:id="@+id/btnCloseNewProduct"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_close_new_apt_desc"
            android:layout_marginLeft="@dimen/btn_floating_margin_end"
            android:layout_marginStart="@dimen/btn_floating_margin_end" />

        <TextView
            android:text="@string/str_new_product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProductTitle"
            android:textSize="@dimen/dialog_title_text_size"
            android:textColor="@color/custom_dark_gray"
            android:fontFamily="sans-serif-medium"
            android:layout_centerInParent="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/customSuperLightBlueTheme"
            android:id="@+id/title_underline"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/add_new_product_card_body"
        android:layout_width="@dimen/new_products_card_view_width"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/rb_margin_right">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtNewProductTitleValue"
                android:hint="@string/str_product_title"
                android:textSize="@dimen/row_text_size"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/custom_dark_gray"
                android:layout_marginTop="@dimen/btn_save_top_margin" />

            <EditText
                android:layout_width="match_parent"
                android:ems="10"
                android:id="@+id/txtProductDescValue"
                android:textColor="@color/custom_dark_gray"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/str_product_desc"
                android:textSize="@dimen/btn_text_size"
                android:lines="2"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:minLines="2"
                android:gravity="top" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtProductEmailValue"
                android:inputType="textEmailAddress"
                android:textColor="@color/custom_dark_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/row_text_size"
                android:hint="@string/str_email_address" />

            <Button
                android:text="@string/str_save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_login_height"
                android:id="@+id/btnSaveNewProduct"
                android:textSize="@dimen/btn_get_started_text_size"
                android:background="@drawable/button_corners"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/btn_save_top_margin" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>