<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    android:soundEffectsEnabled="true"
    android:layout_centerHorizontal="false"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/rb_margin_right">

        <TextView
            android:text="@string/str_search_by_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtContactFilterTitle"
            android:textSize="@dimen/dialog_title_text_size"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/custom_dark_gray"
            android:paddingBottom="@dimen/rb_margin_right" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rgDialogContactFilter" >

            <RadioButton
                android:text="@string/str_last_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rd_grp_height"
                android:id="@+id/rbCDialogLastname"
                android:layout_weight="1"
                android:textColor="@color/customBlueThemeDark"
                android:textSize="@dimen/dialog_title_text_size"
                android:button="@drawable/radio_button_style"
                android:paddingStart="@dimen/rb_space_margin_right"
                android:paddingLeft="@dimen/rb_space_margin_right"
                android:paddingEnd="@dimen/rb_space_margin_right"
                android:paddingRight="@dimen/rb_space_margin_right"
                android:checked="true" />

            <RadioButton
                android:text="@string/str_contact_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rd_grp_height"
                android:id="@+id/rbCDialogCType"
                android:layout_weight="1"
                android:textColor="@color/customBlueThemeDark"
                android:textSize="@dimen/dialog_title_text_size"
                android:button="@drawable/radio_button_style"
                android:paddingLeft="@dimen/rb_space_margin_right"
                android:paddingStart="@dimen/rb_space_margin_right"
                android:paddingRight="@dimen/rb_space_margin_right"
                android:paddingEnd="@dimen/rb_space_margin_right" />

            <RadioButton
                android:text="@string/str_company_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rd_grp_height"
                android:id="@+id/rbCDialogCompany"
                android:layout_weight="1"
                android:textColor="@color/customBlueThemeDark"
                android:textSize="@dimen/dialog_title_text_size"
                android:button="@drawable/radio_button_style"
                android:paddingLeft="@dimen/rb_space_margin_right"
                android:paddingRight="@dimen/rb_space_margin_right"
                android:paddingEnd="@dimen/rb_space_margin_right"
                android:paddingStart="@dimen/rb_space_margin_right" />

            <RadioButton
                android:text="@string/strCity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rd_grp_height"
                android:id="@+id/rbCdialogCity"
                android:layout_weight="1"
                android:textColor="@color/customBlueThemeDark"
                android:textSize="@dimen/dialog_title_text_size"
                android:button="@drawable/radio_button_style"
                android:paddingLeft="@dimen/rb_space_margin_right"
                android:paddingRight="@dimen/rb_space_margin_right"
                android:paddingEnd="@dimen/rb_space_margin_right"
                android:paddingStart="@dimen/rb_space_margin_right" />

            <RadioButton
                android:text="@string/str_state"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rd_grp_height"
                android:id="@+id/rbCDialogState"
                android:layout_weight="1"
                android:textColor="@color/customBlueThemeDark"
                android:textSize="@dimen/dialog_title_text_size"
                android:button="@drawable/radio_button_style"
                android:paddingLeft="@dimen/rb_space_margin_right"
                android:paddingRight="@dimen/rb_space_margin_right"
                android:paddingEnd="@dimen/rb_space_margin_right"
                android:paddingStart="@dimen/rb_space_margin_right" />

            <RadioButton
                android:text="@string/str_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rd_grp_height"
                android:id="@+id/rbCDialogEmail"
                android:layout_weight="1"
                android:textColor="@color/customBlueThemeDark"
                android:textSize="@dimen/dialog_title_text_size"
                android:button="@drawable/radio_button_style"
                android:paddingLeft="@dimen/rb_space_margin_right"
                android:paddingRight="@dimen/rb_space_margin_right"
                android:paddingEnd="@dimen/rb_space_margin_right"
                android:paddingStart="@dimen/rb_space_margin_right" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="@dimen/rb_margin_right">

            <Button
                android:text="@string/str_ok"
                android:layout_height="@dimen/btn_login_height"
                android:id="@+id/btnConfirmCFilter"
                android:layout_width="@dimen/btn_dialog_width"
                android:textAllCaps="false"
                android:textSize="@dimen/dialog_title_text_size"
                android:textColor="@android:color/white"
                android:background="@drawable/button_corners"
                android:fontFamily="sans-serif"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginLeft="@dimen/rb_space_margin_right"
                android:layout_marginStart="@dimen/rb_space_margin_right" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
